# nies

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSES.md  README.md  Trunk.toml
.github/workflows/: ci.yml
crates/nies-app/: Cargo.toml
crates/nies-app/src/: main.rs
crates/nies-core/: Cargo.toml
crates/nies-core/src/: bus.rs  cartridge.rs  input.rs  input_demo.rs  lib.rs  nes.rs  snapshot.rs
crates/nies-core/src/apu/: dmc.rs  mod.rs
crates/nies-core/src/cpu/: addressing.rs  flags.rs  instructions.rs  mod.rs
crates/nies-core/src/mapper/: mod.rs  nrom.rs
crates/nies-core/src/ppu/: background.rs  mod.rs  oam.rs  palette.rs  registers.rs  sprite.rs  state.rs  vram.rs
crates/nies-core/tests/: data_smoke.rs  input_determinism.rs  nestest_compare.rs  ppu_determinism.rs  singlestep_tests.rs  test_roms.rs
crates/nies-core/tests/common/: mod.rs
crates/nies-core/tests/data/: 65x02.tar.zst
crates/nies-core/tests/roms/: manifest.toml
crates/nies-ui/: Cargo.toml
crates/nies-ui/src/: input.rs  lib.rs  nes.wgsl  pacing.rs  palette.rs  renderer.rs  scaling.rs
crates/nies-web/: Cargo.toml  index.html
crates/nies-web/src/: lib.rs
crates/nies-web/tests/: determinism_wasm.rs
docs/superpowers/plans/: 2026-05-02-m0-project-skeleton.md  2026-05-02-m1-cpu-cartridge.md  2026-05-06-m2-ppu.md  2026-05-30-m3-frontend-rendering.md  2026-06-10-m4-input.md  2026-06-11-m5a-interrupt-timing.md
docs/superpowers/specs/: 2026-05-02-nes-emulator-design.md  2026-05-06-m2-ppu-design.md  2026-05-30-m3-frontend-rendering-design.md  2026-06-10-m4-input-design.md  2026-06-10-m5a-interrupt-timing-design.md
