[package]
name = "nies-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
sha2 = "0.10"

[dev-dependencies]
zstd = "0.13"
serde_json = "1"
tar = "0.4"

[lints.rust]
unused_must_use = "deny"
