[package]
name = "nies-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nies-core = { path = "../nies-core" }
log.workspace = true
wgpu = { version = "29", default-features = false, features = ["wgsl"] }
bytemuck = "1"

[lints.rust]
unused_must_use = "deny"
