[package]
name = "nies-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nies-core = { path = "../nies-core" }
nies-ui = { path = "../nies-ui" }
log.workspace = true
console_log = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
winit = { version = "0.30", features = ["rwh_06"] }
wgpu = { version = "29", default-features = false, features = ["webgpu", "webgl"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
unused_must_use = "deny"
